--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "solhint-plugin-prettier": "^0.0.5",
     "solidity-coverage": "^0.7.17",
     "ts-generator": "^0.1.1",
+    "ts-mocha": "^8.0.0",
     "ts-node": "^10.2.1",
     "typechain": "^5.1.2",
     "typescript": "^4.4.3"
@@ -49,6 +50,7 @@
     "format:fix": "prettier --write \"**/*.{ts,js,sol}\"",
     "compile": "hardhat compile",
     "test": "hardhat test",
+    "test-phecta-only": "ts-mocha --timeout 10000 ./test/prehecta/*.test.ts",
     "gas": "REPORT_GAS=true hardhat test",
     "coverage": "HARDHAT_DEPLOY_FIXTURE=true hardhat coverage",
     "typechain": "TS_NODE_TRANSPILE_ONLY=true hardhat typechain",
@@ -57,10 +59,12 @@
     "deploy:rinkeby": "hardhat --network rinkeby deploy",
     "deploy:ropsten": "hardhat --network ropsten deploy",
     "deploy:hardhat": "hardhat --network hardhat deploy",
+    "deploy:testnet": "hardhat --network testnet deploy",
     "sourcify:mainnet": "hardhat --network mainnet sourcify",
     "sourcify:rinkeby": "hardhat --network rinkeby sourcify",
     "etherscan:mainnet": "hardhat --network mainnet etherscan-verify",
-    "etherscan:rinkeby": "hardhat --network rinkeby etherscan-verify"
+    "etherscan:rinkeby": "hardhat --network rinkeby etherscan-verify",
+    "etherscan:testnet": "hardhat --network testnet etherscan-verify"
   },
   "repository": {
     "type": "git",
