--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "test": "test"
   },
   "dependencies": {
-    "@uniswap/v3-periphery": "^1.2.0"
+    "@ethersproject/experimental": "^5.5.0",
+    "@uniswap/v3-periphery": "^1.2.0",
+    "node-schedule": "^2.1.0",
+    "retry": "^0.13.1"
   },
   "devDependencies": {
     "@defi-wonderland/smock": "^2.0.7",
@@ -43,6 +46,9 @@
     "typescript": "^4.4.3"
   },
   "scripts": {
+    "cron:rebase:testnet": "hardhat run scripts/cron/rebase.js --network testnet",
+    "cron:rebase:binance": "hardhat run scripts/cron/rebase.js --network binance",
+    "cron:rebase:rinkeby": "hardhat run scripts/cron/rebase.js --network rinkeby",
     "lint": "eslint \"**/*.{js,ts}\" && solhint src/**/*.sol",
     "lint:fix": "eslint --fix \"**/*.{js,ts}\" && solhint --fix src/**/*.sol",
     "lint:sol": "solhint -f table contracts/**/*.sol",
