--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@ethersproject/experimental": "^5.5.0",
     "@rari-capital/solmate": "^6.2.0",
     "@defi-wonderland/smock": "^2.0.7",
-    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
+    "@nomiclabs/hardhat-ethers": "2.0.4",
     "@nomiclabs/hardhat-etherscan": "^2.1.7",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^4.4.2",
