--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "test": "test"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^4.4.2",
     "@uniswap/v3-periphery": "^1.2.0"
   },
   "devDependencies": {
