task: refactor treasury

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 ALCHEMY_API_KEY=RuGxhTpkUt3S6InAt33l_3NZc4pFwXxS
+QUICKNODE_API_KEY=47ff0c4d6d9fb5c41c64fe956d3d7657eb7be91a
 ETHERSCAN_API_KEY=zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz
 PRIVATE_KEY=PrivateKeyGoesHere
 STAKING_ADDRESS=
