--- a/package.json
+++ b/package.json
@@ -5,16 +5,14 @@
   "directories": {
     "test": "test"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
-    "@ethersproject/experimental": "^5.5.0",
-    "@rari-capital/solmate": "^6.2.0",
     "@defi-wonderland/smock": "^2.0.7",
+    "@ethersproject/experimental": "^5.5.0",
     "@nomiclabs/hardhat-ethers": "2.0.4",
     "@nomiclabs/hardhat-etherscan": "^2.1.7",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@openzeppelin/contracts": "^4.4.2",
+    "@openzeppelin/contracts": "^4.7.0",
     "@typechain/ethers-v5": "^7.1.2",
     "@typechain/hardhat": "^2.3.0",
     "@types/chai": "^4.2.22",
@@ -35,6 +33,7 @@
     "husky": "^7.0.4",
     "prettier": "^2.4.1",
     "prettier-plugin-solidity": "^1.0.0-beta.18",
+    "retry": "^0.13.1",
     "solhint": "^3.3.6",
     "solhint-plugin-prettier": "^0.0.5",
     "solidity-coverage": "^0.7.17",
@@ -42,8 +41,7 @@
     "ts-mocha": "^8.0.0",
     "ts-node": "^10.2.1",
     "typechain": "^5.1.2",
-    "typescript": "^4.4.3",
-    "retry": "^0.13.1"
+    "typescript": "^4.4.3"
   },
   "scripts": {
     "cron:rebase:testnet": "hardhat run scripts/cron/rebase.js --network testnet",
