--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
   },
   "scripts": {
     "cron:rebase:testnet": "hardhat run scripts/cron/rebase.js --network testnet",
-    "cron:rebase:binance": "hardhat run scripts/cron/rebase.js --network binance",
+    "cron:rebase:mainnet": "hardhat run scripts/cron/rebase.js --network mainnet",
     "cron:rebase:rinkeby": "hardhat run scripts/cron/rebase.js --network rinkeby",
     "lint": "eslint \"**/*.{js,ts}\" && solhint src/**/*.sol",
     "lint:fix": "eslint --fix \"**/*.{js,ts}\" && solhint --fix src/**/*.sol",
@@ -63,11 +63,11 @@
     "deploy:ropsten": "hardhat --network ropsten deploy",
     "deploy:hardhat": "hardhat --network hardhat deploy",
     "deploy:testnet": "hardhat --network testnet deploy",
-    "deploy:binance": "hardhat --network binance deploy",
+    "deploy:mainnet": "hardhat --network mainnet deploy",
     "sourcify:rinkeby": "hardhat --network rinkeby sourcify",
     "etherscan:rinkeby": "hardhat --network rinkeby etherscan-verify",
     "etherscan:testnet": "hardhat --network testnet etherscan-verify",
-    "etherscan:binance": "hardhat --network binance etherscan-verify"
+    "etherscan:mainnet": "hardhat --network mainnet etherscan-verify"
   },
   "repository": {
     "type": "git",
